src/styles/PostFeed.scss
@import '_breakpoints.scss';
@import '_colors.scss';

.postFeed {
  margin-top: 100px;

  .post {
    display: flex;
    justify-content: space-between;
    margin-bottom: 100px;

    @include breakpoint(device) {
      display: block;
    }

    figure {
      width: 45.7vw;
      height: 100%;
      padding: 0;
      margin: 0;
      font-size: 0;
      position: relative;
      border: 2px solid $primary;

      @include breakpoint(device) {
        width: 90vw;
        margin-bottom: 20px;
      }

      &.Logo, &.Design, &.Photography {
        margin-top: 30px;

        img {
          position: relative;
          z-index: 2;
        }

        &:before {
          content: "";
          position: absolute;
          top: -30px;
          width: 90%;
          height: 90%;
          left: 5%;
          border: 2px solid $primary;

          @include breakpoint(device) {
            left: 10%;
            width: 80%;
            height: 80%;
          }
        }
      }


      &.Website {
        padding-top: 30px;

        img {
          border-top: 2px solid $primary;
        }

        &:before {
          content: "";
          position: absolute;
          top: 10px;
          left: 10px;
          width: 50px;
          height: 10px;
          background: url(../images/web-buttons.svg) no-repeat;
          background-size: 100%;

        }
      }

      img {
        width: 100%;
      }
    }

    .postInfo {
      width: 45.7vw;

      @include breakpoint(device) {
        width: auto;
      }

      h1 {
        margin: 0 0 2vw;
        text-transform: uppercase;
        font-size: 3.5vw;
        font-weight: normal;

        @include breakpoint(device) {
          font-size: 8vw;
        }
      }

      span {
        font-size: 1.5vw;
        font-family: 'Inconsolata', monospace;

        @include breakpoint(device) {
          font-size: 5vw;
        }

        a {
          position: relative;

          &:before {
            content: '\02937';
            font-size: 30px;
            margin-right: 20px;
          }

          &:hover {

          }
        }
      }

      p {
        font-size: 2vw;
        line-height: 3.5vw;

        @include breakpoint(device) {
          font-size: 8vw;
          line-height: 10vw;
        }

        a {
          font-style: italic;
        }
      }
    }
  }
}

